[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiniGame/JoKenPo.gd" type="Script" id=1]
[ext_resource path="res://Sprites/jokenpo.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Sprites/Backgrounds-Sheet.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Played"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PetOwner:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 68, 178 ), Vector2( 186, 252 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 444, 177 ), Vector2( 326, 252 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PetOwner:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ), Vector2( 12, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PetOwner:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pet:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pet:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ), Vector2( 12, 12 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Played"
tracks/0/type = "value"
tracks/0/path = NodePath("PetOwner:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 186, 252 ), Vector2( 68, 178 ), Vector2( 186, 252 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PetOwner:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0, 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PetOwner:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 12 ), Vector2( 8, 8 ), Vector2( 12, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pet:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 326, 252 ), Vector2( 444, 178 ), Vector2( 326, 252 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pet:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -90.0, 0.0, -90.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pet:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 12, 12 ), Vector2( 8, 8 ), Vector2( 12, 12 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PetOwner:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 68, 178 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 444, 177 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PetOwner:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PetOwner:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pet:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pet:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ) ]
}

[node name="JoKenPo" type="Node2D"]
script = ExtResource( 1 )

[node name="BackGround" type="Sprite" parent="."]
scale = Vector2( 32.125, 23.3125 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 16, 0, 16, 16 )

[node name="PetOwner" type="AnimatedSprite" parent="."]
position = Vector2( 68, 178 )
rotation = 1.5708
scale = Vector2( 12, 12 )
frames = ExtResource( 2 )
animation = "Choosing"

[node name="Pet" type="AnimatedSprite" parent="."]
position = Vector2( 444, 177 )
scale = Vector2( 8, 8 )
frames = ExtResource( 2 )
animation = "Choosing"
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Choosing = SubResource( 1 )
anims/Played = SubResource( 3 )
anims/RESET = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rock" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 175.0
margin_right = 217.0
margin_bottom = 20.0
text = "Rock"

[node name="Paper" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 221.0
margin_right = 269.0
margin_bottom = 20.0
text = "Paper"

[node name="Scissors" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
margin_left = 273.0
margin_right = 337.0
margin_bottom = 20.0
text = "Scissors"

[node name="PlayerWinner" type="Label" parent="CanvasLayer/Control"]
anchor_right = 1.0
margin_bottom = 14.0
size_flags_horizontal = 3
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/Rock" to="." method="_on_Rock_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/Paper" to="." method="_on_Paper_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/HBoxContainer/Scissors" to="." method="_on_Scissors_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
